--- a/src/Components/ShowBrand/Brands.css
+++ b/src/Components/ShowBrand/Brands.css
@@ -36,11 +36,10 @@
 }
 
 .add-button {
-    background-color: #1abc9c;
-    color: white;
     padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
+    border-radius: 20px;
+    background-color: #3498db;
+    color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -49,23 +48,23 @@
     background-color: #16a085;
 }
 
-table {
+.Brands-container table {
     width: 100%;
     border-collapse: collapse;
 }
 
-th, td {
+.Brands-container th, td {
     text-align: left;
     padding: 12px;
     border-bottom: 1px solid #ddd;
 }
 
-th {
+.Brands-container th {
     background-color: #2c3e50;
     color: white;
 }
 
-td button {
+.Brands-container td button {
     background-color: #3498db;
     color: white;
     border: none;
@@ -75,7 +74,7 @@ td button {
     transition: background-color 0.3s ease;
 }
 
-td button:hover {
+.Brands-container td button:hover {
     background-color: #2980b9;
 }
 
