--- a/src/Components/ShowCategories/Categories.css
+++ b/src/Components/ShowCategories/Categories.css
@@ -111,6 +111,17 @@
 .add-button:hover {
     background-color: #16a085;
 }
+.edit-button {
+    background-color: #2980b9;
+}
+
+.delete-button {
+    background-color: #e74c3c;
+}
+
+.edit-button:hover, .delete-button:hover {
+    opacity: 0.8;
+}
 
 .pagination {
     display: flex;
