--- a/src/Components/favorites/ProductCard.css
+++ b/src/Components/favorites/ProductCard.css
@@ -29,6 +29,10 @@
     margin-bottom: 5px;
 }
 
+.product-card-link{
+    text-decoration: none;
+}
+
 .product-card p {
     font-size: 1rem;
     margin: 0;
